# python-project-lvl1

./: .travis.yml  README.md  pyproject.toml
brain_games/: __init__.py  check_is_even.py  cli.py  engine.py
brain_games/games/: brain_calc_game.py  brain_even_game.py  brain_games_common.py  brain_gcd_game.py  brain_prime_game.py  brain_progression_game.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
